--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/app.js",
     "test": "jest",
-    "build": "echo 'Build ejecutado correctamente'"
+    "build": "echo 'Build ejecutado correctamente y'"
   },
   "engines": {
     "node": ">=22.0.0"
